--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,8 @@ head {
   text-align:center;
   color:#B20000;
 }
+body
+{ background: url(http://pixabay.com/get/01cdc56a352ad11c69db/1424274290/notebook-581128.jpg?direct);
+background-size: 100% 100%;
+background-repeat: no-repeat; 
+}
