--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,19 @@
 
 body
-{ background: url(http://pixabay.com/get/01cdc56a352ad11c69db/1424274290/notebook-581128.jpg?direct);
+{ background: url(notebook.jpeg);
 background-size: 100% 100%;
 background-repeat: no-repeat;
 }
+
 #all
-{text-algin:center;
+{text-align:center;
+  float:right;
+  width:500px;
   margin-right:30px;
   margin-bottom:10px;
   margin-top:20px;
+}
 
-
+ul li{
+  text-decoration: none;
 }
