--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,12 +6,12 @@ background-repeat: no-repeat;
 }
 
 #all
-{text-align:center;
+{text-align:left;
   float:right;
   width:500px;
   margin-right:30px;
   margin-bottom:10px;
-  margin-top:20px;
+  margin-top:100px;
 }
 
 ul li{
