--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,9 +9,10 @@ background-repeat: no-repeat;
 {text-align:left;
   float:right;
   width:500px;
-  margin-right:30px;
+  margin-right:50px;
   margin-bottom:10px;
-  margin-top:100px;
+  margin-top:80px;
+  margin-left:600px;
 }
 
 ul li{
