--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,11 @@ background-repeat: no-repeat;
   margin-right:50px;
   margin-bottom:10px;
   margin-top:80px;
-  margin-left:6000px;
+  margin-left:4000px;
+  font-family:american typewriter; 
 }
 
 ul li{
   text-decoration: none;
+  color:purple;
 }
