--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ background-repeat: no-repeat;
   margin-bottom:10px;
   margin-top:80px;
   margin-left:4000px;
-  font-family:american typewriter; 
+  font-family:"American Typewriter",serif, times;
 }
 
 ul li{
