--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,8 @@ background-repeat: no-repeat;
 {text-align:left;
   float:right;
   width:380px;
-
+  margin-top:70px;
+  margin-right:130px;
   font-family:"American Typewriter",serif, times;
 }
 
