--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ background-repeat: no-repeat;
 
 ul li{
   text-decoration: none;
-  color:purple;
+  color:#660066;
 }
-h1 {color:brown;
+h1 {color:#480000;
 }
